# bs2json

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
bs2json/: __init__.py  bs2json.py  converter.py  extension.py  models.py  serializer.py
docs/superpowers/specs/: 2026-03-17-package-restructure-design.md
examples/: AllExamples.py  basic.py  comments_and_whitespace.py  config.py  convert_all.py  custom_labels.py  example_ext.py  examples.py  from_beautifulsoup.py  group_by_tag.py  keep_order.py  save_and_output.py
tests/: expected_output.py  tests.py
