[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bs2json"
version = "0.2.0"
description = "Convert bs4 Tags into Json"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Ijaz Ur Rahim", email = "ijazkhan095@gmail.com"},
]
keywords = ["parser", "html", "bs4", "BeautifulSoup", "soup", "bs2json", "json"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beautifulsoup4>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/MrDebugger/bs2json"
